tests/rosetta/out/Rust/24-game.rs
// Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
fn _input() -> String {
    use std::io::{self, Read};
    let mut s = String::new();
    io::stdin().read_line(&mut s).unwrap();
    s.trim().to_string()
}

fn _now() -> i64 {
    use std::time::{SystemTime, UNIX_EPOCH};
    SystemTime::now().duration_since(UNIX_EPOCH).unwrap().as_nanos() as i64
}

fn main() {
    let randDigit = move || -> i32 {
        return (_now() % 9) + 1;
    };
    let main = move || -> () {
        let mut digits = vec![];
        for i in 0..4 {
            digits = { let mut tmp = digits.clone(); tmp.push(randDigit()); tmp };
        }
        let mut numstr = String::new();
        for i in 0..4 {
            numstr = format!("{}{}", numstr, digits[(i) as usize].to_string());
        }
        println!("{}", vec![format!("{}", format!("{}{}", format!("{}{}", String::from("Your numbers: "), numstr), String::from("
")))].into_iter().filter(|s| !s.is_empty()).collect::<Vec<_>>().join(" ") );
        println!("Enter RPN: ");
        let mut expr = _input();
        if (expr.len() as i32) != 7 {
            println!("invalid. expression length must be 7. (4 numbers, 3 operators, no spaces)");
            return ();
        }
        let mut stack = vec![];
        let mut i = 0;
        let mut valid = true;
        while i < (expr.len() as i32) {
            let ch = &expr[(i) as usize..(i + 1) as usize];
            if ch >= String::from("0") && ch <= String::from("9") {
                if (digits.len() as i32) == 0 {
                    println!("too many numbers.");
                    return ();
                }
                let mut j = 0;
                while digits[(j) as usize] != int(ch) - int(String::from("0")) {
                    j += 1;
                    if j == (digits.len() as i32) {
                        println!("wrong numbers.");
                        return ();
                    }
                }
                digits = digits[(0) as usize..(j) as usize].to_vec() + digits[(j + 1) as usize..(digits.len()) as usize].to_vec();
                stack = { let mut tmp = stack.clone(); tmp.push(float(int(ch) - int(String::from("0")))); tmp };
            } else {
                if (stack.len() as i32) < 2 {
                    println!("invalid expression syntax.");
                    valid = false;
                    break;
                }
                let mut b = stack[((stack.len() as i32) - 1) as usize];
                let mut a = stack[((stack.len() as i32) - 2) as usize];
                if ch == String::from("+") {
                    stack[((stack.len() as i32) - 2) as usize] = a + b;
                }
                stack = stack[(0) as usize..((stack.len() as i32) - 1) as usize].to_vec();
            }
            i += 1;
        }
        if valid {
            if abs(stack[0] - 24.0) > 1e-06 {
                println!("{}", vec![format!("{}", format!("{}{}", format!("{}{}", String::from("incorrect. "), stack[0].to_string()), String::from(" != 24")))].into_iter().filter(|s| !s.is_empty()).collect::<Vec<_>>().join(" ") );
            } else {
                println!("correct.");
            }
        }
    };
    main();
}
